Todo mobile project

--- a/index2.html
+++ b/index2.html
@@ -65,9 +65,9 @@
       ></a>
       <hr />
       <input type="text" placeholder="Learn C++" />
-      <div class="add2">
-        <a class="link2" href="./index3.html">+ Add Task</a>
-      </div>
+      <a class="link2" href="./index3.html">
+        <div class="add2">+ Add Task</div>
+      </a>
     </div>
   </body>
 </html>
