--- a/index3.html
+++ b/index3.html
@@ -15,12 +15,14 @@
     <div class="boundary">
       <h1>Tasks <span class="col">List</span></h1>
     </div>
-    <span class="icon">
-      <i class="fa-sharp fa-solid fa-circle-arrow-left"></i>
-      <span class="back">Back</span>
-    </span>
+    <a class="back" href="./index2.html">
+      <span class="icon">
+        <i class="fa-sharp fa-solid fa-circle-arrow-left"></i>
+        <span class="back">Back</span>
+      </span>
+    </a>
     <span class="add_icon3">
-      <a href="./index4.html"><i class="fa-solid fa-circle-plus"></i></a>
+      <a href="./index.html"><i class="fa-solid fa-circle-plus"></i></a>
       <!-- <a href="./index4.html"><span class="add"> Add New Task </span></a> -->
     </span>
     <div class="parent3">
